feat(new feature): j10 - local type inference